Revert "added shebang"
This reverts commit 22acecd2ebb79817c7c66e90763f2314d29d7263.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "main": "index.js",
   "scripts": {
     "release": "npx np --yolo --no-2fa",
-    "prepublishOnly": "./scripts/prepublishOnly.js",
-    "preinstall": "./scripts/preinstall.js",
+    "prepublishOnly": "node ./scripts/prepublish.js",
+    "preinstall": "node ./scripts/preinstall.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "publishConfig": {
